<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@color/Bottombar_bg"
        android:gravity="center"
        android:text="@string/plugin_chat_set"
        android:textColor="@color/bg_danmu_title"
        android:textSize="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/plugin_chat_time"
            android:textColor="@color/Blue2"
            android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/id_plugin_chat_time_seekbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/id_plugin_chat_time_current"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/plugin_chat_time_current"
                android:textColor="@color/Blue2"
                android:textSize="18dp" />
        </LinearLayout>
        >
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_plugin_content_editer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@color/general_background"
            android:gravity="top"
            android:minLines="5"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/id_plugin_content_save"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_bottom_left_btn"
                android:gravity="center"
                android:text="@string/plugin_chat_save"
                android:textColor="@color/Blue2"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/id_plugin_content_clear"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:background="@drawable/bg_dialog_bottom_right_btn"
                android:gravity="center"
                android:text="@string/plugin_chat_clear"
                android:textColor="@color/Blue2"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
